--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: 
+  name: my-lb
 spec:
-  type: 
+  type: LoadBalancer
   selector:
-    app: 
+    app: web
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 
+      targetPort: 5000
