--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -6,16 +6,16 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app: web
+      app: python-app
   template:
     metadata:
       labels:
-        app: web
+        app: python-app
     spec:
       containers:
       - name: exam2025
         image: gcr.io/icai2025/exam2025:latest
-        imagePullPolicy: ALWAYS
+        imagePullPolicy: Always
         ports:
         - containerPort: 5000
         env:
@@ -25,4 +25,4 @@ spec:
           periodSeconds: 2
           httpGet:
             path: /
-            port: 80
+            port: 5000
